--- a/sass/logo.scss
+++ b/sass/logo.scss
@@ -2,7 +2,26 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  background: var(--accent);
-  color: black;
-  padding: 5px 10px;
+  background: transparent;
+  color: var(--color);
+  padding: 5px 0;
+  font-weight: 800;
+
+  &__bracket {
+    color: var(--color);
+    opacity: 0.6;
+  }
+
+  &__branch {
+    color: rgb(120, 226, 160);
+  }
+
+  &__path {
+    color: rgb(35, 176, 255);
+  }
+
+  &__symbol {
+    color: var(--accent);
+    margin-left: 5px;
+  }
 }
