--- a/sass/logo.scss
+++ b/sass/logo.scss
@@ -13,15 +13,15 @@
   }
 
   &__branch {
-    color: rgb(120, 226, 160);
+    color: #b8bb26;
   }
 
   &__path {
-    color: rgb(35, 176, 255);
+    color: #83a598;
   }
 
   &__symbol {
-    color: var(--accent);
+    color: #fabd2f;
     margin-left: 5px;
   }
 }
