--- a/sass/post.scss
+++ b/sass/post.scss
@@ -36,13 +36,10 @@
   }
 
   &-title {
-    --border: 2px dashed var(--accent);
     position: relative;
     color: var(--accent);
     margin: 0 0 15px;
-    padding-bottom: 15px;
-    border-bottom: var(--border);
-    font-weight: normal;
+    font-weight: bold;
 
     a {
       text-decoration: none;
