--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -8,8 +8,8 @@
   &__inner {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin: 0;
+    justify-content: center;
+    margin: 0 auto;
     width: 760px;
     max-width: 100%;
 
