--- a/templates/index.html
+++ b/templates/index.html
@@ -103,8 +103,6 @@
                     {% endif -%}
 
                     <span class="copyright-theme">
-                        <span class="copyright-theme-sep">:: </span>
-                        Theme: <a href="https://github.com/pawroman/zola-theme-terminimal/">Terminimal</a> by pawroman
                     </span>
                 </div>
             {% endif -%}
@@ -113,8 +111,9 @@
     {% endblock footer %}
 
 </div>
-{%- block extra_body %}
-{% endblock extra_body -%}
+    {%- block extra_body %}
+    {% endblock extra_body -%}
+    <script src="{{ get_url(path="js/copy-code-to-clipboard.js") }}"></script>
 </body>
 
 </html>
