--- a/templates/shortcodes/quote.html
+++ b/templates/shortcodes/quote.html
@@ -1,5 +1,5 @@
-<div style="display: flex; justify-content: center; width: 100%; margin: 2rem 0;">
-    <p style="text-align: left; font-style: italic; white-space: pre-wrap; margin: 0;">
+<div class="quote-shortcode">
+    <p class="quote-text">
         {{- body | safe -}}
     </p>
 </div>
