feat: add analytics

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
 
     {%- block extra_head %}
     {% endblock extra_head -%}
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </head>
 
 <body class="">
@@ -115,5 +117,4 @@
     {% endblock extra_body -%}
     <script src="{{ get_url(path="js/copy-code-to-clipboard.js") }}"></script>
 </body>
-
 </html>
