--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,22 +39,27 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 1.6rem;
-  color: #b8bb26;
+  color: #d3869b;
 }
 
 h2 {
   font-size: 1.4rem;
-  color: #fabd2f;
+  color: #d79921;
 }
 
 h3 {
   font-size: 1.25rem;
-  color: #83a598;
+  color: #b8bb26;
 }
 
-h4, h5, h6 {
+h4  {
   font-size: 1.15rem;
   color: #8ec07c;
+}
+
+h5, h6{
+  font-size: 1.05rem;
+  color: #83a598;
 }
 
 
