--- a/sass/color/gruvbox.scss
+++ b/sass/color/gruvbox.scss
@@ -1,5 +1,5 @@
 :root {
-  --accent: #d79921;
+  --accent: #fabd2f;
   --accent-alpha-70: rgba(215, 153, 33, 0.7);
   --accent-alpha-20: rgba(215, 153, 33, 0.2);
 
