--- a/sass/shortcodes.scss
+++ b/sass/shortcodes.scss
@@ -27,40 +27,49 @@ $alert-colors: (
 .alert {
     display: flex;
     align-items: flex-start;
+    gap: 1rem; /* Use gap instead of margins for cleaner spacing */
     margin-block: 25px;
     border-radius: 4px;
     border: 1px solid;
-    padding: 20px;
+    padding: 16px; /* Slightly reduced for mobile comfort */
     background: #1d2021;
+    overflow: hidden; /* Prevents internal spills */
+}
+
+.alert-icon {
+    flex-shrink: 0; /* CRITICAL: Prevents the icon from shrinking to 0 width */
+    display: block;
+    background-color: currentColor; /* Matches the text color set in mixin */
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    width: 1.5rem;
+    height: 1.5rem; /* Explicit height works better than aspect-ratio in older mobile browsers */
 }
 
 .alert-content {
     flex: 1;
-    margin-inline-start: -2rem;
+    min-width: 0; /* Allows text to wrap properly inside flex containers */
 
-    &>:not(:first-child) {
-        margin-block: 0.5rem 0;
+    & > :not(:first-child) {
+        margin-block-start: 0.5rem;
     }
 
-    p { margin: 0; }
-}
-
-.alert-icon {
-    display: flex;
-    align-items: center;
-    margin-inline-end: 0.5rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    aspect-ratio: 1/1;
-    width: 1.5rem;
+    p { 
+        margin: 0;
+        word-wrap: break-word; /* Prevents long URLs or words from breaking the layout */
+    }
 }
 
 .alert-title {
-    display: flex;
-    align-items: center;
-    margin-inline-start: 2rem;
+    display: block;
     font-weight: bold;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
+    /* Removed the large margin-inline-start that caused the shift */
+}
+
+.alert-icon-robot {
+    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath d='M 16 1 C 14.894531 1 14 1.894531 14 3 C 14 3.738281 14.402344 4.371094 15 4.71875 L 15 7 L 10 7 C 7.25 7 5 9.25 5 12 L 5 14 L 2 14 L 2 22 L 5 22 L 5 27 L 27 27 L 27 22 L 30 22 L 30 14 L 27 14 L 27 12 C 27 9.25 24.75 7 22 7 L 17 7 L 17 4.71875 C 17.597656 4.371094 18 3.738281 18 3 C 18 1.894531 17.105469 1 16 1 Z M 10 9 L 22 9 C 23.667969 9 25 10.332031 25 12 L 25 25 L 23 25 L 23 20 L 9 20 L 9 25 L 7 25 L 7 12 C 7 10.332031 8.332031 9 10 9 Z M 12 13 C 10.894531 13 10 13.894531 10 15 C 10 16.105469 10.894531 17 12 17 C 13.105469 17 14 16.105469 14 15 C 14 13.894531 13.105469 13 12 13 Z M 20 13 C 18.894531 13 18 13.894531 18 15 C 18 16.105469 18.894531 17 20 17 C 21.105469 17 22 16.105469 22 15 C 22 13.894531 21.105469 13 20 13 Z M 4 16 L 5 16 L 5 20 L 4 20 Z M 27 16 L 28 16 L 28 20 L 27 20 Z M 11 22 L 13 22 L 13 25 L 11 25 Z M 15 22 L 17 22 L 17 25 L 15 25 Z M 19 22 L 21 22 L 21 25 L 19 25 Z'/%3E%3C/svg%3E");
 }
 
 .alert-icon-note {
