fix: reivnder path to just be revinder

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                 <a href="{{ logo_link | safe }}" style="text-decoration: none;">
                     <div class="logo">
                       {% block logo_content %}
-                        <span class="logo__bracket">[</span><span class="logo__branch">master</span><span class="logo__bracket">]</span><span class="logo__bracket">[</span><span class="logo__path">~/revinder-blog{% if current_path and current_path != "/" %}{{ current_path | trim_end_matches(pat="/") }}{% endif %}</span><span class="logo__bracket">]</span><span class="logo__symbol">$</span>
+                        <span class="logo__bracket">[</span><span class="logo__branch">master</span><span class="logo__bracket">]</span><span class="logo__bracket">[</span><span class="logo__path">~/revinder{% if current_path and current_path != "/" %}{{ current_path | trim_end_matches(pat="/") }}{% endif %}</span><span class="logo__bracket">]</span><span class="logo__symbol">$</span>
                         {% endblock logo_content %}
                     </div>
                 </a>
