--- a/sass/post.scss
+++ b/sass/post.scss
@@ -39,7 +39,7 @@
     position: relative;
     color: var(--accent);
     margin: 0 0 15px;
-    font-weight: bold;
+    font-weight: normal;
 
     a {
       text-decoration: none;
