--- a/templates/tags/list.html
+++ b/templates/tags/list.html
@@ -9,7 +9,8 @@
         <h1 class="post-title">Tags</h1>
 
         <ul>
-            {% for term in terms %}
+            {% set sorted_terms = terms | sort(attribute="pages") | reverse %}
+            {% for term in sorted_terms %}
             <li class="tag-list">
                 <a href="{{ term.permalink | safe }}">
                     {{ term.name }} ({{ term.pages | length }} post{{ term.pages | length | pluralize }})
