--- a/templates/page.html
+++ b/templates/page.html
@@ -4,6 +4,10 @@
 {{ title_macros::title(page_title=page.title, main_title=config.title) }}
 {%- endblock -%}
 
+{% block logo_content %}
+    {{ logo_macros::breadcrumb_logo(config=config, current_url=page.permalink) }}
+{% endblock logo_content %}
+
 {% block content %}
     <div class="post">
         {{ post_macros::header(page=page) }}
