swap font to iosevka

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Hack, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
+  font-family: 'JetBrains Mono', monospace;
+  -webkit-font-smoothing: antialiased;
   font-size: 1rem;
   line-height: 1.54;
   background-color: var(--background);
@@ -135,8 +136,8 @@ figure {
 }
 
 code {
-  font-family: Hack, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
-  font-feature-settings: normal;
+  font-family: 'JetBrains Mono', monospace;
+  -webkit-font-smoothing: antialiased;
   background: #3c3836;
   color: #ebdbb2;
   padding: 2px 4px;
@@ -146,7 +147,8 @@ code {
 }
 
 pre {
-  font-family: Hack, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
+  font-family: 'JetBrains Mono', monospace;
+  -webkit-font-smoothing: antialiased;
   padding: 24px;
   font-size: .95rem;
   overflow: auto;
